--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ Bear in mind that syncing will start from the pruned Milestone, not Genesis.</p>
 <ol>
 <li>Kickstart a <code>rosetta-iota</code> server:</li>
 </ol>
-<pre><code>$ cargo run -- --iota-endpoint http://0.0.0.0:14265 --network testnet6 --port 3030 --mode online
+<pre><code>$ cargo run -- --iota-endpoint http://0.0.0.0:14265 --network testnet6 --bech32-hrp atoi --port 3030 --mode online
 </code></pre>
 <ol start="2">
 <li>From a new terminal, you can test each endpoint via <code>curl</code>:</li>
