--- a/welcome.html
+++ b/welcome.html
@@ -341,7 +341,7 @@ $ curl -sSfL https://raw.githubusercontent.com/coinbase/rosetta-cli/master/scrip
 <ol>
 <li>Kickstart a <code>rosetta-iota</code> server:</li>
 </ol>
-<pre><code>$ cargo run -- --iota-endpoint http://0.0.0.0:14265 --network testnet6 --bech32-hrp atoi --port 3030 --mode online
+<pre><code>$ cargo run -- --iota-endpoint http://0.0.0.0:14265 --network testnet6 --bech32-hrp atoi --indexation rosetta --port 3030 --mode online
 </code></pre>
 <ol start="2">
 <li>From a new terminal, you can test each endpoint via <code>curl</code>:</li>
