deploy: f67b0f106bce28729c2c166d23802a4ce2470feb

--- a/print.html
+++ b/print.html
@@ -331,6 +331,7 @@ That is achieved via the <code>/api/v1/milestones/:milestoneId/utxo-changes</cod
 <li><code>NODE_URL</code>: specifies which IOTA Node will be used to enter the network.</li>
 <li><code>NETWORK</code>: specifies the network (e.g.: <code>mainnet</code> or <code>testnet6</code>).</li>
 <li><code>DATA_DIR</code>: specifies where <code>rosetta-cli</code> should write its files. </li>
+<li><code>INSTALL</code>: enables installation of <code>rosetta-cli</code> via <code>curl</code>. Comment out to disable.</li>
 <li><code>PRUNE</code>: enables pruning (useful when no Permanode is available). Comment out to disable.</li>
 <li><code>RECONCILE</code>: enables reconciliation. Comment out to disable.</li>
 <li><code>CLEAN</code>: enables deletion of <code>$DATA_DIR</code> everytime the script is executed. Comment out to disable.</li>
