deploy: 6e2600408b62c15fb08cdb8df608ba222d90cedc

--- a/index.html
+++ b/index.html
@@ -329,13 +329,16 @@ That is achieved via the <code>/api/v1/milestones/:milestoneId/utxo-changes</cod
 <li><code>NODE_URL</code>: specifies which IOTA Node will be used to enter the network.</li>
 <li><code>NETWORK</code>: specifies the network (e.g.: <code>mainnet</code> or <code>testnet6</code>).</li>
 <li><code>DATA_DIR</code>: specifies where <code>rosetta-cli</code> should write its files. </li>
-<li><code>INSTALL</code>: enables installation of <code>rosetta-cli</code> via <code>curl</code>. Comment out to disable.</li>
-<li><code>PRUNE</code>: enables pruning (useful when no Permanode is available). Comment out to disable.</li>
-<li><code>RECONCILE</code>: enables reconciliation. Comment out to disable.</li>
-<li><code>CLEAN</code>: enables deletion of <code>$DATA_DIR</code> everytime the script is executed. Comment out to disable.</li>
-<li><code>DATA</code>: enables execution of <code>rosetta-cli check:data</code>. Comment out to disable.</li>
-<li><code>CONSTRUCTION</code>: enables execution of <code>rosetta-cli check:construction</code>. Comment out to disable.</li>
+<li><code>INSTALL</code>: enables installation of <code>rosetta-cli</code> via <code>curl</code>. Disabled by default.</li>
+<li><code>PRUNE</code>: enables pruning (useful when no Permanode is available). Disabled by default.</li>
+<li><code>RECONCILE</code>: enables reconciliation. Disabled by default.</li>
+<li><code>CLEAN</code>: enables deletion of <code>$DATA_DIR</code> everytime the script is executed. Disabled by default.</li>
+<li><code>DATA</code>: enables execution of <code>rosetta-cli check:data</code>. Disabled by default.</li>
+<li><code>CONSTRUCTION</code>: enables execution of <code>rosetta-cli check:construction</code>. Disabled by default.</li>
 </ul>
+<p>For example, you could run the script with the following options:</p>
+<pre><code>$ INSTALL=1 PRUNE=1 DATA=1 CONSTRUCTION=1 ./rosetta_cli.sh
+</code></pre>
 <h3 id="curl"><a class="header" href="#curl">curl</a></h3>
 <p>Curl commands can also be used for manual inspection of each API endpoint.</p>
 <ol>
