--- a/welcome.html
+++ b/welcome.html
@@ -167,8 +167,24 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="rosetta-iota"><a class="header" href="#rosetta-iota">rosetta-iota</a></h1>
+                        <p align="center">
+  <a href="https://www.rosetta-api.org">
+    <img width="90%" alt="Rosetta" src="https://www.rosetta-api.org/img/rosetta_header.png">
+  </a>
+</p>
+<h3 align="center">
+   Rosetta IOTA
+</h3>
+<h2 id="overview"><a class="header" href="#overview">Overview</a></h2>
 <p>IOTA Rosetta API Implementation</p>
+<p><code>rosetta-iota</code> provides a reference implementation of the <a href="https://www.rosetta-api.org/">Rosetta API</a> for IOTA in Rust.</p>
+<h2 id="features"><a class="header" href="#features">Features</a></h2>
+<ul>
+<li>Rosetta API implementation (both Data API and Construction API)</li>
+<li>Stateless, offline transaction construction for any Ed25519-Bech32 Address.</li>
+</ul>
+<h2 id="documentation"><a class="header" href="#documentation">Documentation</a></h2>
+<p>Please refer to <code>/docs</code> and its subdirections for further documentation.</p>
 
                     </main>
 
