deploy: 1ae0266334acf43c162b7678e4066c918752acbb

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 <li>Stateless, offline transaction construction for any Ed25519-Bech32 Address.</li>
 </ul>
 <h2 id="documentation"><a class="header" href="#documentation">Documentation</a></h2>
-<p>Please refer to <code>/docs</code> and its subdirections for further documentation.</p>
+<p>Please refer to <code>/docs</code> and its subdirectories for further documentation.</p>
 
                     </main>
 
