deploy: 2246cc3e56abefc9fee4d9b846f3b0149f68cc5e

--- a/404.html
+++ b/404.html
@@ -97,7 +97,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="welcome.html"><strong aria-hidden="true">1.</strong> Welcome</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="welcome.html"><strong aria-hidden="true">1.</strong> Welcome</a></li><li class="chapter-item expanded "><a href="rosetta-iota/index.html"><strong aria-hidden="true">2.</strong> Rosetta IOTA</a></li><li class="chapter-item expanded "><a href="testing/index.html"><strong aria-hidden="true">3.</strong> Testing</a></li><li class="chapter-item expanded "><a href="utils/index.html"><strong aria-hidden="true">4.</strong> Utils</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
