--- a/print.html
+++ b/print.html
@@ -97,7 +97,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="welcome.html"><strong aria-hidden="true">1.</strong> Welcome</a></li><li class="chapter-item expanded "><a href="rosetta-iota/index.html"><strong aria-hidden="true">2.</strong> Rosetta IOTA</a></li><li class="chapter-item expanded "><a href="testing/index.html"><strong aria-hidden="true">3.</strong> Testing</a></li><li class="chapter-item expanded "><a href="utils/index.html"><strong aria-hidden="true">4.</strong> Utils</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="pages/welcome.html"><strong aria-hidden="true">1.</strong> Welcome</a></li><li class="chapter-item expanded "><a href="pages/relation.html"><strong aria-hidden="true">2.</strong> Relation between IOTA and Rosetta</a></li><li class="chapter-item expanded "><a href="pages/deployment.html"><strong aria-hidden="true">3.</strong> Deployment</a></li><li class="chapter-item expanded "><a href="pages/testing.html"><strong aria-hidden="true">4.</strong> Testing</a></li><li class="chapter-item expanded "><a href="pages/api_reference.html"><strong aria-hidden="true">5.</strong> API Reference</a></li><li class="chapter-item expanded "><a href="pages/utils.html"><strong aria-hidden="true">6.</strong> Utils</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -169,14 +169,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="welcome-to-the-iota-rosetta-api-docs--"><a class="header" href="#welcome-to-the-iota-rosetta-api-docs--">Welcome to the IOTA Rosetta API Docs  📖</a></h1>
-<pre><code>&lt;img width=&quot;90%&quot; alt=&quot;Rosetta&quot; src=&quot;https://www.rosetta-api.org/img/rosetta_header.png&quot;&gt;
-</code></pre>
-</a>
-</p>
-<h3 align="center">
-   Rosetta IOTA
-</h3>
+                        <h1 id="welcome-to-the-documentation-for-rosetta-iota--"><a class="header" href="#welcome-to-the-documentation-for-rosetta-iota--">Welcome to the documentation for rosetta-iota  📖</a></h1>
 <h2 id="overview"><a class="header" href="#overview">Overview</a></h2>
 <p><code>rosetta-iota</code> provides a reference implementation of the Rosetta API for IOTA in Rust. If you haven't heard of the Rosetta API, you can find more information <a href="https://www.rosetta-api.org/">here</a>.</p>
 <h2 id="features"><a class="header" href="#features">Features</a></h2>
@@ -185,58 +178,31 @@
 <li>Stateless, offline, curve-based transaction construction</li>
 <li><a href="https://www.rosetta-api.org/docs/storage_pruning.html#docsNav">Storage Pruning</a> using a block height-based configuration setting</li>
 </ul>
-<h2 id="quick-start"><a class="header" href="#quick-start">Quick start</a></h2>
-<p>Ensure <code>docker</code> and <code>docker-compose</code> are installed. As specified in the Rosetta API documentation, all Rosetta implementations must be deployable via Docker and support running via either an online or offline mode.</p>
-<p><strong>Following commands will start an IOTA fullnode (<a href="https://github.com/gohornet/hornet">Hornet</a>) together with a Rosetta API instance.</strong>
-Once the IOTA node has synced with the network, the Rosetta API will be available at: http://localhost:3030</p>
-<p><strong>Testnet:Online</strong></p>
-<pre><code>NETWORK=testnet7 BECH32_HRP=atoi TX_TAG=Rosetta MODE=online docker-compose up
-</code></pre>
-<p><strong>Testnet:Offline</strong></p>
-<pre><code>NETWORK=testnet7 BECH32_HRP=atoi TX_TAG=Rosetta MODE=offline docker-compose up
-</code></pre>
-<h2 id="testing-with-rosetta-cli"><a class="header" href="#testing-with-rosetta-cli">Testing with rosetta-cli</a></h2>
-<p>Ensure the IOTA node is running and an instance of the Rosetta API is available.
-To validate the correctness of <code>rosetta-iota</code> run the commands below:</p>
-<p>Testing the Data API <strong>(Testnet)</strong>:</p>
-<pre><code>ROSETTA_CLI_INSTALL=1 BOOTSTRAP_BALANCES=1 NODE_URL=http://localhost:14265 ./check_data_testnet.sh
-</code></pre>
-<p>Testing the Construction API <strong>(Testnet)</strong>:</p>
-<pre><code>ROSETTA_CLI_INSTALL=1 BOOTSTRAP_BALANCES=1 NODE_URL=http://localhost:14265 ./check_construction_testnet.sh
-</code></pre>
-<h2 id="documentation"><a class="header" href="#documentation">Documentation</a></h2>
-<p>Please refer to <a href="https://rosetta-api.docs.iota.org">https://rosetta-api.docs.iota.org</a> for further documentation.</p>
-<h1 id="iota-protocol"><a class="header" href="#iota-protocol">IOTA protocol</a></h1>
-<p>The IOTA protocol differs from most DLT technologies in the sense that it is not a Blockchain, but a Directed Acyclic Graph (DAG), popularly known as <a href="https://assets.ctfassets.net/r1dr6vzfxhev/2t4uxvsIqk0EUau6g2sw0g/45eae33637ca92f85dd9f4a3a218e1ec/iota1_4_3.pdf">the Tangle</a>.</p>
-<p>For that reason, a few concepts have been adapted in relation to the Rosetta API.</p>
-<h2 id="messages-and-transactions"><a class="header" href="#messages-and-transactions">Messages and Transactions</a></h2>
-<p>IOTA uses messages as a envelope around a payload that can consist of data (indexation), value (transactions) or a combination of both (a indexation payload embedded in a transaction). Transactions use a utxo-based model for transfering value.</p>
+<h2 id="license"><a class="header" href="#license">License</a></h2>
+<p><code>rosetta-iota</code> is released under the Apache License 2.0.</p>
+<h1 id="relation-between-iota-and-rosetta"><a class="header" href="#relation-between-iota-and-rosetta">Relation between IOTA and Rosetta</a></h1>
+<p>The IOTA protocol differs from most DLT technologies in the sense that it uses a directed acyclic graph (DAG) data structure that allows transactions to be added in parallel.</p>
 <h2 id="blocks-and-milestones"><a class="header" href="#blocks-and-milestones">Blocks and Milestones</a></h2>
-<p>Being a DAG, IOTA has the concept of Milestones as the closest analogy for Blocks. Periodically, nodes settle the current ledger state by creating a special message that defines a new Milestone.</p>
-<p>IOTA Fullnodes (such as <a href="https://github.com/gohornet/hornet.git">HORNET</a> and <a href="https://github.com/iotaledger/bee.git">BEE</a>) don't contain the entire history of the Tangle. They have a parameter called <code>pruningIndex</code> which represents the oldest Milestone available on the node.</p>
-<p>Only Permanodes (such as <a href="https://github.com/iotaledger/chronicle.rs/tree/main/chronicle-node">Chronicle</a>) have the ability of holding the entire Tangle history.</p>
-<h2 id="node-endpoints"><a class="header" href="#node-endpoints">Node Endpoints</a></h2>
-<p>The following IOTA Node endpoints are necessary for the <code>rosetta-iota</code> implementation:</p>
-<ul>
-<li><code>/api/v1/info</code></li>
-<li><code>/api/v1/milestones</code></li>
-<li><code>/api/v1/milestones/{milestoneId}/utxo-changes</code></li>
-<li><code>/api/v1/address</code></li>
-<li><code>/api/v1/peers</code></li>
-<li><code>/api/v1/outputs</code></li>
-<li><code>/api/v1/messages</code></li>
-</ul>
+<p>IOTA has the concept of Milestones as the closest analogy for Blocks. Periodically, an authorized entity issues a milestone (imagine as checkpoint) to the network to settle the ledger state.</p>
+<h2 id="messages-and-transactions"><a class="header" href="#messages-and-transactions">Messages and Transactions</a></h2>
+<p>IOTA nodes gossip messages. A message is a envelope around a payload that can consist of data (indexation), value (transactions) or a combination of both (a indexation payload embedded in a transaction). Transactions use a UTXO-based model to transfer value.
+You can find more information about the message format <a href="https://github.com/GalRogozinski/protocol-rfcs/blob/message/text/0017-message/0017-message.md">here</a>.</p>
+<h2 id="iota-nodes"><a class="header" href="#iota-nodes">IOTA nodes</a></h2>
+<p><strong>IOTA full-nodes</strong> (such as <a href="https://github.com/gohornet/hornet.git">HORNET</a> and <a href="https://github.com/iotaledger/bee.git">Bee</a>) are able to start up securely from a recent block instead of having to synchronize from genesis.
+Also, they are able to prune history from time to time in a safe way.
+<strong>IOTA full-nodes per default don't hold the entire Tangle history.</strong></p>
+<p>Only <strong>IOTA Permanodes</strong> (such as <a href="https://github.com/iotaledger/chronicle.rs/tree/main/chronicle-node">Chronicle</a>) <strong>are designed to hold the entire Tangle history.</strong></p>
+<p><code>rosetta-iota</code> aims for a more reliable integration and better performance with limiting state storage. For this reasons <strong>the Rosetta API implementation will be deployed with an IOTA full-node</strong> (<a href="https://github.com/gohornet/hornet.git">HORNET</a>).</p>
 <h1 id="iota-and-rosetta"><a class="header" href="#iota-and-rosetta">IOTA and Rosetta</a></h1>
 <p>Here we describe how concepts from the IOTA protocol were adapted for the Rosetta Endpoints.</p>
 <h2 id="genesis-milestone"><a class="header" href="#genesis-milestone">Genesis Milestone</a></h2>
-<p>The genesis milestone is not available on Fullnodes, but the <code>/network/status</code> endpoint response contains a <code>genesis_block_identifier</code> field. Therefore, whenever a Fullnode is used by the <code>rosetta-iota</code> server, the <code>genesis_block_identifier</code> is populated as such:</p>
+<p>Per default, the genesis milestone is not available on full-nodes, but the <code>/network/status</code> endpoint response contains a required <code>genesis_block_identifier</code> field. The <code>genesis_block_identifier</code> is populated as such:</p>
 <pre><code>&quot;genesis_block_identifier&quot;: {
   &quot;index&quot;: 1,
   &quot;hash&quot;: &quot;0000000000000000000000000000000000000000000000000000000000000000&quot;
 }
 </code></pre>
-<p>Technically speaking, that is not 100% accurate, as the genesis milestone identifier is not a series of <code>0</code>s. However, a dummy value is used as a compromise in order not to render the <code>/network/status</code> endpoint unavailable. </p>
-<p>Nevertheless, the correct value is returned when a Permanode with full Tangle history is used.</p>
+<p>Technically speaking, that is not accurate, as the genesis milestone identifier is not a series of <code>0</code>s. However, a dummy value is used as a compromise in order not to render the <code>/network/status</code> endpoint unavailable. </p>
 <p>Syncing <code>rosetta-cli</code> is also affected by this. Syncing from genesis is only possible with a Permanode, as well. Otherwise, the <code>test.sh</code> shows how to use the Fullnode's <code>pruningIndex</code> as the <code>start_index</code> for the configuration <code>JSON</code>.</p>
 <h2 id="transactions-and-operations"><a class="header" href="#transactions-and-operations">Transactions and Operations</a></h2>
 <p>The <code>/block</code> endpoint responds with information about balance changing Transactions that happened on a specific Milestone.
@@ -366,6 +332,25 @@ That is achieved via the <code>/api/v1/milestones/:milestoneId/utxo-changes</cod
   ]
 }
 </code></pre>
+<h2 id="quick-start"><a class="header" href="#quick-start">Quick start</a></h2>
+<p>Ensure <code>docker</code> and <code>docker-compose</code> are installed. As specified in the Rosetta API documentation, all Rosetta implementations must be deployable via Docker and support running via either an online or offline mode.</p>
+<p><strong>Following commands will start an IOTA fullnode (<a href="https://github.com/gohornet/hornet">Hornet</a>) together with a Rosetta API instance.</strong>
+Once the IOTA node has synced with the network, the Rosetta API will be available at: http://localhost:3030</p>
+<p><strong>Testnet:Online</strong></p>
+<pre><code>NETWORK=testnet7 BECH32_HRP=atoi TX_TAG=Rosetta MODE=online docker-compose up
+</code></pre>
+<p><strong>Testnet:Offline</strong></p>
+<pre><code>NETWORK=testnet7 BECH32_HRP=atoi TX_TAG=Rosetta MODE=offline docker-compose up
+</code></pre>
+<h2 id="testing-with-rosetta-cli"><a class="header" href="#testing-with-rosetta-cli">Testing with rosetta-cli</a></h2>
+<p>Ensure the IOTA node is running and an instance of the Rosetta API is available.
+To validate the correctness of <code>rosetta-iota</code> run the commands below:</p>
+<p>Testing the Data API <strong>(Testnet)</strong>:</p>
+<pre><code>ROSETTA_CLI_INSTALL=1 BOOTSTRAP_BALANCES=1 NODE_URL=http://localhost:14265 ./check_data_testnet.sh
+</code></pre>
+<p>Testing the Construction API <strong>(Testnet)</strong>:</p>
+<pre><code>ROSETTA_CLI_INSTALL=1 BOOTSTRAP_BALANCES=1 NODE_URL=http://localhost:14265 ./check_construction_testnet.sh
+</code></pre>
 <h2 id="quick-start-1"><a class="header" href="#quick-start-1">Quick start</a></h2>
 <p>Ensure <code>docker</code> and <code>docker-compose</code> are installed. As specified in the Rosetta API documentation, all Rosetta implementations must be deployable via Docker and support running via either an online or offline mode.</p>
 <p><strong>Following commands will start an IOTA fullnode (<a href="https://github.com/gohornet/hornet">Hornet</a>) together with a Rosetta API instance.</strong>
@@ -470,6 +455,7 @@ To validate the correctness of <code>rosetta-iota</code> run the commands below:
 </ul>
 <pre><code>$ curl --request POST 'http://localhost:3030/construction/combine' \--header 'Accept: application/json' \--header 'Content-Type: application/json' \--data-raw '{&quot;network_identifier&quot;:{&quot;blockchain&quot;:&quot;iota&quot;,&quot;network&quot;:&quot;testnet6&quot;},&quot;unsigned_transaction&quot;:&quot;0001000063aa5b2476105ad4ebbb995968216cef0d940791d900afd1180a8df4e527b3460000010000005eec99d6ee4ba21aa536c3364bbf2b587cb98a7f2565b75d948b10083e2143f8050000000000000000000000&quot;,&quot;signatures&quot;:[{&quot;signing_payload&quot;:{&quot;account_identifier&quot;:{&quot;address&quot;:&quot;ae98475c63cfebc918b57193a4183f4374f67974971aff9034699793d331d7de&quot;},&quot;hex_bytes&quot;:&quot;c8be532dd8f351c28b6cdb7903d076b356129189d11ad50c46feb25ca472b984&quot;,&quot;signature_type&quot;:&quot;ed25519&quot;},&quot;public_key&quot;:{&quot;hex_bytes&quot;:&quot;b7a3c12dc0c8c748ab07525b701122b88bd78f600c76342d27f25e5f92444cde&quot;,&quot;curve_type&quot;:&quot;edwards25519&quot;},&quot;signature_type&quot;:&quot;ed25519&quot;,&quot;hex_bytes&quot;:&quot;59057634a166d84edebb88ab17a33394c0ccf1d46adffc3a0095c0f5e7e9dbe766ab05cb0244486d272e61f1e09db1bdb6e4fbb3a0398013415769e484606a02&quot;}]}' | jq
 </code></pre>
+<h1 id="api-reference"><a class="header" href="#api-reference">API Reference</a></h1>
 <h1 id="utils"><a class="header" href="#utils">Utils</a></h1>
 <p>A subcrate called <code>utils</code> provides extra tools to help automation of <code>rosetta-cli</code> checks.</p>
 <h2 id="faucet"><a class="header" href="#faucet">Faucet</a></h2>
