--- a/404.html
+++ b/404.html
@@ -129,7 +129,7 @@
                         
                     </div>
 
-                    <h1 class="menu-title">IOTA rosetta-api</h1>
+                    <h1 class="menu-title">rosetta-iota</h1>
 
                     <div class="right-buttons">
                         
