--- a/pages/deployment.html
+++ b/pages/deployment.html
@@ -168,30 +168,34 @@
                 <div id="content" class="content">
                     <main>
                         <h2 id="iota-nodes"><a class="header" href="#iota-nodes">IOTA nodes</a></h2>
-<p><strong>IOTA full-nodes</strong> (such as <a href="https://github.com/gohornet/hornet.git">HORNET</a> and <a href="https://github.com/iotaledger/bee.git">Bee</a>) are able to start up securely from a recent block instead of having to synchronize from genesis.
-Also, they are able to prune history from time to time in a safe way.
+<p><strong>IOTA full-nodes</strong> (such as <a href="https://github.com/gohornet/hornet.git">HORNET</a> and <a href="https://github.com/iotaledger/bee.git">Bee</a>) are able to start up from a recent block instead of having to synchronize from genesis. This can be achieved by bootstrapping the node with recent <a href="https://github.com/luca-moser/protocol-rfcs/blob/local-snapshot-file-format/text/0000-local-snapshot-file-format/0000-local-snapshot-file-format.md">snapshots</a>. 
+Also, IOTA full-nodes are able to prune history from time to time in a safe way.
 <strong>IOTA full-nodes per default don't hold the entire Tangle history - they are not designed for it.</strong></p>
 <p>Only <strong>IOTA Permanodes</strong> (such as <a href="https://github.com/iotaledger/chronicle.rs/tree/main/chronicle-node">Chronicle</a>) <strong>are designed to hold the entire Tangle history.</strong></p>
-<p><code>rosetta-iota</code> aims for a more reliable integration and better performance with limiting state storage. For this reasons <strong>the Rosetta API implementation will be deployed with an IOTA full-node</strong> (<a href="https://github.com/gohornet/hornet.git">HORNET</a>).</p>
-<h2 id="quick-start"><a class="header" href="#quick-start">Quick start</a></h2>
-<p>Ensure <code>docker</code> and <code>docker-compose</code> are installed. As specified in the Rosetta API documentation, all Rosetta implementations must be deployable via Docker and support running via either an online or offline mode.</p>
-<p><strong>Following commands will start an IOTA fullnode (<a href="https://github.com/gohornet/hornet">Hornet</a>) together with a Rosetta API instance.</strong>
-Once the IOTA node has synced with the network, the Rosetta API will be available at: http://localhost:3030</p>
+<p><code>rosetta-iota</code> aims for a more reliable integration and better performance with limiting state storage. For these reasons <strong>the Rosetta API implementation will be deployed with an IOTA full-node</strong> (<a href="https://github.com/gohornet/hornet.git">HORNET</a>).</p>
+<h2 id="testnet-deployment"><a class="header" href="#testnet-deployment">Testnet deployment</a></h2>
+<ol>
+<li>
+<p>Ensure <code>docker</code> and <code>docker-compose</code> are installed.</p>
+</li>
+<li>
+<p>Download the latest release of <code>rosetta-iota</code> and extract the files in a folder of your choice.</p>
+</li>
+<li>
+<p>Add peers for the HORNET node to the <code>hornet/peering.json</code> file.</p>
+</li>
+<li>
+<p><strong>Run following commands to start a HORNET node together with a Rosetta API instance:</strong></p>
 <p><strong>Testnet:Online</strong></p>
 <pre><code>NETWORK=testnet7 BECH32_HRP=atoi TX_TAG=Rosetta MODE=online docker-compose up
 </code></pre>
 <p><strong>Testnet:Offline</strong></p>
 <pre><code>NETWORK=testnet7 BECH32_HRP=atoi TX_TAG=Rosetta MODE=offline docker-compose up
 </code></pre>
-<h2 id="testing-with-rosetta-cli"><a class="header" href="#testing-with-rosetta-cli">Testing with rosetta-cli</a></h2>
-<p>Ensure the IOTA node is running and an instance of the Rosetta API is available.
-To validate the correctness of <code>rosetta-iota</code> run the commands below:</p>
-<p>Testing the Data API <strong>(Testnet)</strong>:</p>
-<pre><code>ROSETTA_CLI_INSTALL=1 BOOTSTRAP_BALANCES=1 NODE_URL=http://localhost:14265 ./check_data_testnet.sh
-</code></pre>
-<p>Testing the Construction API <strong>(Testnet)</strong>:</p>
-<pre><code>ROSETTA_CLI_INSTALL=1 BOOTSTRAP_BALANCES=1 NODE_URL=http://localhost:14265 ./check_construction_testnet.sh
-</code></pre>
+</li>
+</ol>
+<p>Once the HORNET node has synced with the network, the Rosetta API will be available at: http://localhost:3030</p>
+<p>The HORNET node will be bootstrapped automatically with a recent snapshot to start synchronizing from a recent block. The snapshot will be automatically downloaded from https://dbfiles.testnet.chrysalis2.com. <strong>If you want to bootstrap the HORNET node yourself with some custom snapshots, you can put them in the <code>data/snapshots/</code> directory.</strong></p>
 
                     </main>
 
