--- a/pages/testing.html
+++ b/pages/testing.html
@@ -167,41 +167,26 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h2 id="quick-start"><a class="header" href="#quick-start">Quick start</a></h2>
-<p>Ensure <code>docker</code> and <code>docker-compose</code> are installed. As specified in the Rosetta API documentation, all Rosetta implementations must be deployable via Docker and support running via either an online or offline mode.</p>
-<p><strong>Following commands will start an IOTA fullnode (<a href="https://github.com/gohornet/hornet">Hornet</a>) together with a Rosetta API instance.</strong>
-Once the IOTA node has synced with the network, the Rosetta API will be available at: http://localhost:3030</p>
-<p><strong>Testnet:Online</strong></p>
-<pre><code>ROSETTA_BECH32_HRP=atoi ROSETTA_NETWORK_NAME=testnet7 ROSETTA_INDEXATION=Rosetta ROSETTA_MODE=online docker-compose up
+                        <h1 id="testing-with-rosetta-cli"><a class="header" href="#testing-with-rosetta-cli">Testing with rosetta-cli</a></h1>
+<p>Make sure you have installed following dependencies:</p>
+<pre><code>$ sudo apt-get install sed jq psmisc
 </code></pre>
-<p><strong>Testnet:Offline</strong></p>
-<pre><code>ROSETTA_BECH32_HRP=atoi ROSETTA_NETWORK_NAME=testnet7 ROSETTA_INDEXATION=Rosetta ROSETTA_MODE=offline docker-compose up
-</code></pre>
-<h2 id="testing-with-rosetta-cli"><a class="header" href="#testing-with-rosetta-cli">Testing with rosetta-cli</a></h2>
 <p>Ensure the IOTA node is running and an instance of the Rosetta API is available.
 To validate the correctness of <code>rosetta-iota</code> run the commands below:</p>
 <p>Testing the Data API <strong>(Testnet)</strong>:</p>
-<pre><code>ROSETTA_CLI_INSTALL=1 BOOTSTRAP_BALANCES=1 ./check_data_testnet.sh
+<pre><code>ROSETTA_CLI_INSTALL=1 BOOTSTRAP_BALANCES=1 NODE_URL=http://localhost:14265 ./check_data_testnet.sh
 </code></pre>
-<h1 id="testing"><a class="header" href="#testing">Testing</a></h1>
-<h2 id="rosetta-cli"><a class="header" href="#rosetta-cli">rosetta-cli</a></h2>
-<p>The <code>rosetta_cli.sh</code> shell script automates testing via <code>rosetta-cli</code>.</p>
-<p>Make sure you have run the following (on a Debian-based Linux) to install dependencies:</p>
-<pre><code>$ sudo apt-get install sed jq psmisc
+<p>Testing the Construction API <strong>(Testnet)</strong>:</p>
+<pre><code>ROSETTA_CLI_INSTALL=1 BOOTSTRAP_BALANCES=1 NODE_URL=http://localhost:14265 ./check_construction_testnet.sh
 </code></pre>
 <p>The script uses the following shell variables:</p>
 <ul>
-<li><code>INSTALL_ROSETTA_CLI=1</code> ...installs rosetta-cli</li>
+<li><code>ROSETTA_CLI_INSTALL=1</code> ...installs rosetta-cli</li>
 <li><code>BOOTSTRAP_BALANCES=1</code> ...deletes the rosetta-cli storage, downloads the latest available IOTA snapshot and bootstraps balances</li>
+<li><code>NODE_URL=1</code> ...the local</li>
 <li><code>NO_BOOTSTRAP=1</code> ...keeps the rosetta-cli storage</li>
 </ul>
-<p>For example, you could run the script with the following options:</p>
-<pre><code>$ ROSETTA_CLI_INSTALL=1 BOOTSTRAP_BALANCES=1 ./check_data_testnet.sh
-</code></pre>
-<p>Testing the Construction API <strong>(Testnet)</strong>:</p>
-<pre><code>./check_construction_testnet.sh
-</code></pre>
-<h2 id="curl"><a class="header" href="#curl">curl</a></h2>
+<h2 id="testing-with-curl"><a class="header" href="#testing-with-curl">Testing with curl</a></h2>
 <p>Curl commands can also be used for manual inspection of each API endpoint.</p>
 <ol>
 <li>Kickstart a <code>rosetta-iota</code> server:</li>
