--- a/print.html
+++ b/print.html
@@ -185,9 +185,9 @@
 <h2 id="blocks-and-milestones"><a class="header" href="#blocks-and-milestones">Blocks and Milestones</a></h2>
 <p>IOTA has the concept of Milestones as the closest analogy for Blocks. Periodically, an authorized entity issues a milestone (imagine as checkpoint) to the network to settle the ledger state.</p>
 <h2 id="messages-and-transactions"><a class="header" href="#messages-and-transactions">Messages and Transactions</a></h2>
-<p>IOTA nodes gossip messages. A message is a envelope around a payload that can consist of data (indexation), value (transactions) or a combination of both (a indexation payload embedded in a transaction). Transactions use a <strong>UTXO-based</strong> model to transfer value.
-You can find more information about the message format <a href="https://github.com/GalRogozinski/protocol-rfcs/blob/message/text/0017-message/0017-message.md">here</a>.</p>
-<h1 id="iota-and-rosetta"><a class="header" href="#iota-and-rosetta">IOTA and Rosetta</a></h1>
+<p>IOTA nodes gossip &quot;messages&quot;. A message is an envelope that may contain a payload. You can find more information about the message format <a href="https://github.com/GalRogozinski/protocol-rfcs/blob/message/text/0017-message/0017-message.md">here</a>. There are different types of payloads for different purposes. To transfer value, a &quot;transaction payload&quot; will be used.
+Furthermore, transactions of funds are carried out in <strong>UTXO</strong> style. To learn more about the transaction payload click <a href="https://github.com/luca-moser/protocol-rfcs/blob/signed-tx-payload/text/0000-transaction-payload/0000-transaction-payload.md">here</a>.</p>
+<h1 id="design-choices"><a class="header" href="#design-choices">Design choices</a></h1>
 <p>Here we describe how concepts from the IOTA protocol were adapted for the Rosetta Endpoints.</p>
 <h2 id="genesis-milestone"><a class="header" href="#genesis-milestone">Genesis Milestone</a></h2>
 <p>Per default, the genesis milestone is not available on full-nodes, but the <code>/network/status</code> endpoint response contains a required <code>genesis_block_identifier</code> field. The <code>genesis_block_identifier</code> is populated as such:</p>
@@ -327,22 +327,38 @@ That is achieved via the <code>/api/v1/milestones/:milestoneId/utxo-changes</cod
 }
 </code></pre>
 <h2 id="iota-nodes"><a class="header" href="#iota-nodes">IOTA nodes</a></h2>
-<p><strong>IOTA full-nodes</strong> (such as <a href="https://github.com/gohornet/hornet.git">HORNET</a> and <a href="https://github.com/iotaledger/bee.git">Bee</a>) are able to start up securely from a recent block instead of having to synchronize from genesis.
-Also, they are able to prune history from time to time in a safe way.
+<p><strong>IOTA full-nodes</strong> (such as <a href="https://github.com/gohornet/hornet.git">HORNET</a> and <a href="https://github.com/iotaledger/bee.git">Bee</a>) are able to start up from a recent block instead of having to synchronize from genesis. This can be achieved by bootstrapping the node with recent <a href="https://github.com/luca-moser/protocol-rfcs/blob/local-snapshot-file-format/text/0000-local-snapshot-file-format/0000-local-snapshot-file-format.md">snapshots</a>. 
+Also, IOTA full-nodes are able to prune history from time to time in a safe way.
 <strong>IOTA full-nodes per default don't hold the entire Tangle history - they are not designed for it.</strong></p>
 <p>Only <strong>IOTA Permanodes</strong> (such as <a href="https://github.com/iotaledger/chronicle.rs/tree/main/chronicle-node">Chronicle</a>) <strong>are designed to hold the entire Tangle history.</strong></p>
-<p><code>rosetta-iota</code> aims for a more reliable integration and better performance with limiting state storage. For this reasons <strong>the Rosetta API implementation will be deployed with an IOTA full-node</strong> (<a href="https://github.com/gohornet/hornet.git">HORNET</a>).</p>
-<h2 id="quick-start"><a class="header" href="#quick-start">Quick start</a></h2>
-<p>Ensure <code>docker</code> and <code>docker-compose</code> are installed. As specified in the Rosetta API documentation, all Rosetta implementations must be deployable via Docker and support running via either an online or offline mode.</p>
-<p><strong>Following commands will start an IOTA fullnode (<a href="https://github.com/gohornet/hornet">Hornet</a>) together with a Rosetta API instance.</strong>
-Once the IOTA node has synced with the network, the Rosetta API will be available at: http://localhost:3030</p>
+<p><code>rosetta-iota</code> aims for a more reliable integration and better performance with limiting state storage. For these reasons <strong>the Rosetta API implementation will be deployed with an IOTA full-node</strong> (<a href="https://github.com/gohornet/hornet.git">HORNET</a>).</p>
+<h2 id="testnet-deployment"><a class="header" href="#testnet-deployment">Testnet deployment</a></h2>
+<ol>
+<li>
+<p>Ensure <code>docker</code> and <code>docker-compose</code> are installed.</p>
+</li>
+<li>
+<p>Download the latest release of <code>rosetta-iota</code> and extract the files in a folder of your choice.</p>
+</li>
+<li>
+<p>Add peers for the HORNET node to the <code>hornet/peering.json</code> file.</p>
+</li>
+<li>
+<p><strong>Run following commands to start a HORNET node together with a Rosetta API instance:</strong></p>
 <p><strong>Testnet:Online</strong></p>
 <pre><code>NETWORK=testnet7 BECH32_HRP=atoi TX_TAG=Rosetta MODE=online docker-compose up
 </code></pre>
 <p><strong>Testnet:Offline</strong></p>
 <pre><code>NETWORK=testnet7 BECH32_HRP=atoi TX_TAG=Rosetta MODE=offline docker-compose up
 </code></pre>
-<h2 id="testing-with-rosetta-cli"><a class="header" href="#testing-with-rosetta-cli">Testing with rosetta-cli</a></h2>
+</li>
+</ol>
+<p>Once the HORNET node has synced with the network, the Rosetta API will be available at: http://localhost:3030</p>
+<p>The HORNET node will be bootstrapped automatically with a recent snapshot to start synchronizing from a recent block. The snapshot will be automatically downloaded from https://dbfiles.testnet.chrysalis2.com. <strong>If you want to bootstrap the HORNET node yourself with some custom snapshots, you can put them in the <code>data/snapshots/</code> directory.</strong></p>
+<h1 id="testing-with-rosetta-cli"><a class="header" href="#testing-with-rosetta-cli">Testing with rosetta-cli</a></h1>
+<p>Make sure you have installed following dependencies:</p>
+<pre><code>$ sudo apt-get install sed jq psmisc
+</code></pre>
 <p>Ensure the IOTA node is running and an instance of the Rosetta API is available.
 To validate the correctness of <code>rosetta-iota</code> run the commands below:</p>
 <p>Testing the Data API <strong>(Testnet)</strong>:</p>
@@ -351,41 +367,14 @@ To validate the correctness of <code>rosetta-iota</code> run the commands below:
 <p>Testing the Construction API <strong>(Testnet)</strong>:</p>
 <pre><code>ROSETTA_CLI_INSTALL=1 BOOTSTRAP_BALANCES=1 NODE_URL=http://localhost:14265 ./check_construction_testnet.sh
 </code></pre>
-<h2 id="quick-start-1"><a class="header" href="#quick-start-1">Quick start</a></h2>
-<p>Ensure <code>docker</code> and <code>docker-compose</code> are installed. As specified in the Rosetta API documentation, all Rosetta implementations must be deployable via Docker and support running via either an online or offline mode.</p>
-<p><strong>Following commands will start an IOTA fullnode (<a href="https://github.com/gohornet/hornet">Hornet</a>) together with a Rosetta API instance.</strong>
-Once the IOTA node has synced with the network, the Rosetta API will be available at: http://localhost:3030</p>
-<p><strong>Testnet:Online</strong></p>
-<pre><code>ROSETTA_BECH32_HRP=atoi ROSETTA_NETWORK_NAME=testnet7 ROSETTA_INDEXATION=Rosetta ROSETTA_MODE=online docker-compose up
-</code></pre>
-<p><strong>Testnet:Offline</strong></p>
-<pre><code>ROSETTA_BECH32_HRP=atoi ROSETTA_NETWORK_NAME=testnet7 ROSETTA_INDEXATION=Rosetta ROSETTA_MODE=offline docker-compose up
-</code></pre>
-<h2 id="testing-with-rosetta-cli-1"><a class="header" href="#testing-with-rosetta-cli-1">Testing with rosetta-cli</a></h2>
-<p>Ensure the IOTA node is running and an instance of the Rosetta API is available.
-To validate the correctness of <code>rosetta-iota</code> run the commands below:</p>
-<p>Testing the Data API <strong>(Testnet)</strong>:</p>
-<pre><code>ROSETTA_CLI_INSTALL=1 BOOTSTRAP_BALANCES=1 ./check_data_testnet.sh
-</code></pre>
-<h1 id="testing"><a class="header" href="#testing">Testing</a></h1>
-<h2 id="rosetta-cli"><a class="header" href="#rosetta-cli">rosetta-cli</a></h2>
-<p>The <code>rosetta_cli.sh</code> shell script automates testing via <code>rosetta-cli</code>.</p>
-<p>Make sure you have run the following (on a Debian-based Linux) to install dependencies:</p>
-<pre><code>$ sudo apt-get install sed jq psmisc
-</code></pre>
 <p>The script uses the following shell variables:</p>
 <ul>
-<li><code>INSTALL_ROSETTA_CLI=1</code> ...installs rosetta-cli</li>
+<li><code>ROSETTA_CLI_INSTALL=1</code> ...installs rosetta-cli</li>
 <li><code>BOOTSTRAP_BALANCES=1</code> ...deletes the rosetta-cli storage, downloads the latest available IOTA snapshot and bootstraps balances</li>
+<li><code>NODE_URL=1</code> ...the local</li>
 <li><code>NO_BOOTSTRAP=1</code> ...keeps the rosetta-cli storage</li>
 </ul>
-<p>For example, you could run the script with the following options:</p>
-<pre><code>$ ROSETTA_CLI_INSTALL=1 BOOTSTRAP_BALANCES=1 ./check_data_testnet.sh
-</code></pre>
-<p>Testing the Construction API <strong>(Testnet)</strong>:</p>
-<pre><code>./check_construction_testnet.sh
-</code></pre>
-<h2 id="curl"><a class="header" href="#curl">curl</a></h2>
+<h2 id="testing-with-curl"><a class="header" href="#testing-with-curl">Testing with curl</a></h2>
 <p>Curl commands can also be used for manual inspection of each API endpoint.</p>
 <ol>
 <li>Kickstart a <code>rosetta-iota</code> server:</li>
