deploy: c6685bab6315ccf72010a1f897ee5c8a82ab81a0

--- a/pages/deployment.html
+++ b/pages/deployment.html
@@ -95,7 +95,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../pages/welcome.html"><strong aria-hidden="true">1.</strong> Welcome</a></li><li class="chapter-item expanded "><a href="../pages/relation.html"><strong aria-hidden="true">2.</strong> Relation between IOTA and Rosetta</a></li><li class="chapter-item expanded "><a href="../pages/deployment.html" class="active"><strong aria-hidden="true">3.</strong> Deployment</a></li><li class="chapter-item expanded "><a href="../pages/testing.html"><strong aria-hidden="true">4.</strong> Testing</a></li><li class="chapter-item expanded "><a href="../pages/api_reference.html"><strong aria-hidden="true">5.</strong> API Reference</a></li><li class="chapter-item expanded "><a href="../pages/utils.html"><strong aria-hidden="true">6.</strong> Utils</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../pages/welcome.html"><strong aria-hidden="true">1.</strong> Welcome</a></li><li class="chapter-item expanded "><a href="../pages/relation.html"><strong aria-hidden="true">2.</strong> Relation between IOTA and Rosetta</a></li><li class="chapter-item expanded "><a href="../pages/deployment.html" class="active"><strong aria-hidden="true">3.</strong> Deployment</a></li><li class="chapter-item expanded "><a href="../pages/testing.html"><strong aria-hidden="true">4.</strong> Testing</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -195,7 +195,7 @@ Also, IOTA full-nodes are able to prune history from time to time in a safe way.
 </li>
 </ol>
 <p>Once the HORNET node has synced with the network, the Rosetta API will be available at: http://localhost:3030</p>
-<p>The HORNET node will be bootstrapped automatically with a recent snapshot to start synchronizing from a recent block. The snapshot will be automatically downloaded from https://dbfiles.testnet.chrysalis2.com. <strong>If you want to bootstrap the HORNET node yourself with some custom snapshots, you can put them in the <code>data/snapshots/</code> directory.</strong></p>
+<p>The HORNET node will be bootstrapped automatically with recent snapshots to start synchronizing from a recent block. The snapshots will be automatically downloaded from https://dbfiles.testnet.chrysalis2.com. <strong>If you want to bootstrap the HORNET node yourself with some custom snapshots, you can put them in the <code>data/snapshots/</code> directory.</strong></p>
 
                     </main>
 
